--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,7 +4,7 @@ port: 8080
 version: 2.0.0
 start_time: "2022-08-08"  #此日期用于雪花算法
 cluster: true   #如果集群部署 cache必须使用redis
-host: http://localhost:8080
+host: http://81.71.98.26:11801
 log:
   level: trace
 #  filename: /Volumes/disk01/baizelog/baizelog.log  #默认./log
@@ -32,7 +32,7 @@ token:
   expire_time: 60
 upload_file:
   type: local     #上传地点 本地->local(集群部署需要做硬盘挂载,挂载路径需一直)  亚马逊->s3   移动云->eos  如果不填则默认本地当前目录
-  domain_name: http://localhost:8080   #如果本地则填写服务器域名,其他存储桶填写对应域名
+  domain_name: http://81.71.98.26:11801   #如果本地则填写服务器域名,其他存储桶填写对应域名
   localhost:
     public_path: ./public/
     private_path: ./private/
