--- a/config/config.yaml
+++ b/config/config.yaml
@@ -43,3 +43,8 @@ dataset:
   image_url: http://81.71.98.26:11105
 metric:
   host: 0.0.0.0:6000
+daemonize:
+  address: ":10050"
+  server_list:
+    - 127.0.0.1:10050
+  debug: true
