--- a/config/config.yaml
+++ b/config/config.yaml
@@ -35,7 +35,7 @@ token:
   expire_time: 60
 upload_file:
   type: local     #上传地点 本地->local(集群部署需要做硬盘挂载,挂载路径需一直)  亚马逊->s3   移动云->eos  如果不填则默认本地当前目录
-  domain_name: http://192.168.2.122:8080   #如果本地则填写服务器域名,其他存储桶填写对应域名
+  domain_name:    #如果本地则填写服务器域名,其他存储桶填写对应域名
   localhost:
     public_path: ./public/
     private_path: ./private/
